Moreo reliable embedding